Integração com serviço (Server) implementado.

--- a/app/src/main/res/layout/content_lista_item.xml
+++ b/app/src/main/res/layout/content_lista_item.xml
@@ -10,9 +10,9 @@
     tools:showIn="@layout/activity_lista_item"
     tools:context="br.com.alura.appdaescola.ListaItemActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list_view_frequencia"></ListView>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
