--- a/app/src/main/res/layout/item_aluno.xml
+++ b/app/src/main/res/layout/item_aluno.xml
@@ -20,4 +20,12 @@
         android:id="@+id/item_aluno_serie"
         android:textColor="#000000"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/item_aluno_matricula"
+        android:textColor="#000000"/>
+
 </LinearLayout>
