--- a/app/src/main/res/layout/content_lista_item_nota.xml
+++ b/app/src/main/res/layout/content_lista_item_nota.xml
@@ -10,9 +10,9 @@
     tools:showIn="@layout/activity_lista_item_nota"
     tools:context="br.com.alura.appdaescola.ListaItemNotaActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerNota"
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@+id/list_view_nota"></ListView>
 
 </RelativeLayout>
