Restauração do projeto para um ponto funcional SEM O SERVIÇO.

--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -14,7 +14,9 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/content_principal_listView"></ListView>
+        android:layout_height="wrap_content"
+        android:id="@+id/content_principal_listView"
+        android:divider="@android:color/black"
+        android:dividerHeight="1dp"></ListView>
 
 </RelativeLayout>
